--- a/tick_tack_toe.ipynb
+++ b/tick_tack_toe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f6408066",
    "metadata": {},
    "outputs": [],
@@ -12,9 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "22aacf59",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -34,28 +36,35 @@
       "   | X |   \n",
       "\n",
       "\n",
-      "   | O | O \n",
+      " O | O |   \n",
       "-----------\n",
       " X | X | O \n",
       "-----------\n",
       "   | X |   \n",
       "\n",
       "\n",
-      "   | O | O \n",
+      " O | O | X \n",
       "-----------\n",
       " X | X | O \n",
       "-----------\n",
-      " X | X |   \n",
+      "   | X |   \n",
       "\n",
       "\n",
-      "   | O | O \n",
+      " O | O | X \n",
       "-----------\n",
       " X | X | O \n",
       "-----------\n",
+      " O | X |   \n",
+      "\n",
+      "\n",
+      " O | O | X \n",
+      "-----------\n",
       " X | X | O \n",
+      "-----------\n",
+      " O | X | X \n",
       "\n",
       "\n",
-      "Winner = O\n"
+      "Draw\n"
      ]
     }
    ],
@@ -82,9 +91,11 @@
     "                print('\\n-----------')\n",
     "    print('\\n\\n')\n",
     "    \n",
-    "    \n",
+    "\n",
     "def MCTS(board):\n",
     "    best_move = None\n",
+    "    \n",
+    "    #### TODO: IMPLEMENT MONTE CARLO SEARCH TREE ####\n",
     "    \n",
     "    return best_move\n",
     "        \n",
@@ -101,12 +112,16 @@
     "        if player == 0:\n",
     "            best_move = MCTS(board)\n",
     "            \n",
+    "            #### TODO: REPLACE WITH BEST MOVE ####\n",
+    "            \n",
     "            # select a random action\n",
     "            action_idx = np.random.choice(actions_idxs, size=1)\n",
     "            y,x = actions[action_idx][0]\n",
     "\n",
     "            # do action on board\n",
     "            board[y,x] = 1 if player == 0 else 2\n",
+    "            \n",
+    "            ######################################\n",
     "            \n",
     "        # player 'O'\n",
     "        elif player == 1:\n",
@@ -155,7 +170,7 @@
     "    # draw the initial state of the board\n",
     "    draw_board(board)\n",
     "    \n",
-    "    # initiate player that has to move\n",
+    "    # initiate player that has to move (player X)\n",
     "    player = 0\n",
     "    \n",
     "    winner = None\n",
